# harrp

./: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
config/: .reid3d_with_tracker_params.yaml.swp  dwa_params.yaml  mpc_params.yaml  reid3d_with_tracker_params.yaml
external_files/: pp_infer_launch.py
harrp/: ground_removal.py  pub_pillar_bbox.py
launch/: dwa_launch.py  rviz_harrp_launch.py  rviz_pointpillars_launch.py  rviz_reid3d_launch.py  rviz_tptbench_launch.py  simulation_test_launch.py  unified_rviz_pointpillars_launch.py
rviz/: harrp.rviz  harrp_kachaka.rviz  reid3d.rviz  tpt_bench.rviz
scripts/: dwa_controller.py  livox_tf_broadcaster.py  mpc_controller.py  odom_tf_broadcaster.py  pub_pillar_bbox.py  reid3d.py  reid3d_with_tracker.py  sfm_controller.py  tpt2_reid3d.py  tpt_reid3d.py  virtual_target.py
src/: ground_removal_node.cpp  ground_removalcomp_node.cpp
